--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div class="swiper-slide">
 		<div class="inner">
 			<div class="con">
-				<img src="img/pic1.png">
+				<img src="./img/pic1.png">
 				<h2>Ipsum dolor sit amet.</h2>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, optio.</p>
 			</div>
